<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:id="@+id/detail_content"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/main_backdrop"
                    android:layout_width="match_parent"
                    android:adjustViewBounds="true"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/photo_background_protection"
                    android:layout_height="match_parent"/>
            </FrameLayout>
            <TextView
                android:id="@+id/main_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text='Blacky'
                android:paddingEnd="@dimen/padding_normal"
                android:paddingStart="@dimen/padding_normal"
                android:paddingTop="@dimen/padding_large"
                android:transitionName="@string/transition_name_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="?android:textColorPrimary"
                />

            <android.support.v7.widget.GridLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                app:useDefaultMargins="true"
                android:layout_height="wrap_content"
                app:columnCount="2">
                <TextView
                    app:layout_column="0"
                    app:layout_row="0"
                    android:text="@string/breed"
                    style="@style/left_column_bold" />
                <TextView
                    style="@style/right_column_normal"
                    app:layout_column="1"
                    app:layout_row="0"
                    tools:text="@string/example_breed"
                    android:id="@+id/breed_detail" />
                <TextView
                    style="@style/left_column_bold"
                    app:layout_column="0"
                    app:layout_row="1"
                    android:text="@string/age" />
                <TextView
                    style="@style/right_column_normal"
                    app:layout_column="1"
                    app:layout_row="1"
                    tools:text="@string/example_age"
                    android:id="@+id/age_detail" />
                <TextView
                    style="@style/left_column_bold"
                    android:text="@string/gender"
                    app:layout_column="0"
                    app:layout_row="2" />
                <TextView
                    style="@style/right_column_normal"
                    tools:text="@string/example_gender"
                    app:layout_column="1"
                    app:layout_row="2"
                    android:id="@+id/gender_detail" />
                <TextView
                    android:text="@string/description"
                    app:layout_column="0"
                    app:layout_row="3"
                    style="@style/left_column_bold" />
                <TextView
                    style="@style/right_column_normal"
                    tools:text="@string/example_description"
                    app:layout_column="1"
                    app:layout_row="3"
                    android:id="@+id/description_detail" />
            </android.support.v7.widget.GridLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.FloatingActionButton
        android:src="@drawable/ic_email_white_24dp"
        android:id="@+id/fab"
        app:fabSize="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:clickable="true"
        android:transitionName="@string/transition_fab"
        android:layout_margin="@dimen/fab_margin"
        app:useCompatPadding="true"
        app:layout_anchorGravity="bottom|right|end"
        />
</android.support.design.widget.CoordinatorLayout>