<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.svaiyapu.petutrecht.Detail.DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary">

            <ImageView
                android:id="@+id/main_backdrop"
                android:layout_width="match_parent"
                android:adjustViewBounds="true"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:transitionName="@string/transition_name"
                app:layout_collapseMode="parallax"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_protection_scrim_height"
                android:layout_gravity="bottom"
                android:layout_alignBottom="@+id/main_backdrop"
                android:background="@drawable/photo_background_protection"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            app:useDefaultMargins="true"
            android:layout_height="match_parent"
            app:columnCount="2">
            <TextView
                app:layout_column="0"
                app:layout_row="0"
                android:text="@string/breed"
                style="@style/left_column_bold" />
            <TextView
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="0"
                tools:text="@string/example_breed"
                android:id="@+id/breed_detail" />
            <TextView
                style="@style/left_column_bold"
                app:layout_column="0"
                app:layout_row="1"
                android:text="@string/age" />
            <TextView
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="1"
                tools:text="@string/example_age"
                android:id="@+id/age_detail" />
            <TextView
                style="@style/left_column_bold"
                android:text="@string/gender"
                app:layout_column="0"
                app:layout_row="2" />
            <TextView
                style="@style/right_column_normal"
                tools:text="@string/example_gender"
                app:layout_column="1"
                app:layout_row="2"
                android:id="@+id/gender_detail" />
            <TextView
                android:text="@string/description"
                app:layout_column="0"
                app:layout_row="3"
                style="@style/left_column_bold" />
            <TextView
                style="@style/right_column_normal"
                tools:text="@string/example_description"
                app:layout_column="1"
                app:layout_row="3"
                android:id="@+id/description_detail" />
        </android.support.v7.widget.GridLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/scroll"
        app:layout_anchorGravity="bottom|right|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_dialog_email"/>

</android.support.design.widget.CoordinatorLayout>
